syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "google/api/annotations.proto";

option go_package = "threat-intel-core/api/proto/services";

service SchedulerService {
  rpc GetScheduledRoutines(google.protobuf.Empty) returns (ScheduledRoutines) {
    option (google.api.http) = {
      get: "/api/v1/scheduler/routines"
    };
  };

  rpc RunScheduledRoutine(RoutineRunOptions) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/scheduler/routine/{UUID}"
      body: "*"
    };
  };
}

message ScheduledRoutines {
  repeated ScheduledRoutine Routines = 1;
}

message ScheduledRoutine {
  string UUID = 1;

  bool IsEnabled = 2;
  bool IsRunning = 3;

  string Name = 4;
  string Group = 5;
  string Description = 6;

  // https://crontab.guru/
  string CRON = 7;

  google.protobuf.Timestamp NextRunAt = 8;
  optional google.protobuf.Timestamp LastRunAt = 9;
  optional google.protobuf.Timestamp LastSuccessfulRunAt = 10;

  string LastErrorText = 11;
  string LastSuccessText = 12;
}

message RoutineRunOptions {
  string UUID = 1;
}